@@ -45,7 +45,9 @@ public class GitLabMergeRequest implements PullRequest {
     private final GitLabRepository repository;
     private final GitLabHost host;
 
-    private List<Label> labels;
+    // Only cache the label names as those are most commonly used and converting to
+    // Label objects is expensive. This list is always sorted.
+    private List<String> labels;
 
     GitLabMergeRequest(GitLabRepository repository, GitLabHost host, JSONValue jsonValue, RestRequest request) {
         this.repository = repository;
@@ -53,9 +55,8 @@ public class GitLabMergeRequest implements PullRequest {
         this.json = jsonValue;
         this.request = request.restrict("merge_requests/" + json.get("iid").toString() + "/");
 
-        labels = json.get("labels")
-                     .stream()
-                     .map(s -> labelNameToLabel(s.asString()))
+        labels = json.get("labels").stream()
+                     .map(JSONValue::asString)
                      .sorted()
                      .collect(Collectors.toList());
     }
@@ -649,22 +650,21 @@ public class GitLabMergeRequest implements PullRequest {
 
     @Override
     public void addLabel(String label) {
-        labels = null;
         // GitLab does not allow adding/removing single labels, only setting the full list
         // We retrieve the list again here to try to minimize the race condition window
         var currentJson = request.get("").execute().asObject();
         var labels = Stream.concat(currentJson.get("labels").stream()
-                .map(JSONValue::asString),
-                List.of(label).stream())
+                                .map(JSONValue::asString),
+                        Stream.of(label))
                 .collect(Collectors.toSet());
         request.put("")
                .body("labels", String.join(",", labels))
                .execute();
+        this.labels = labels.stream().sorted().toList();
     }
 
     @Override
     public void removeLabel(String label) {
-        labels = null;
         var currentJson = request.get("").execute().asObject();
         var labels = currentJson.get("labels").stream()
                 .map(JSONValue::asString)
@@ -673,6 +673,7 @@ public class GitLabMergeRequest implements PullRequest {
         request.put("")
                .body("labels", String.join(",", labels))
                .execute();
+        this.labels = labels.stream().sorted().toList();
     }
 
     @Override
@@ -680,21 +681,20 @@ public class GitLabMergeRequest implements PullRequest {
         request.put("")
                .body("labels", String.join(",", labels))
                .execute();
-        this.labels = labels.stream().map(this::labelNameToLabel).collect(Collectors.toList());
+        this.labels = labels.stream().sorted().toList();
     }
 
     @Override
     public List<Label> labels() {
-        if (labels == null) {
-            var currentJson = request.get("").execute().asObject();
-            labels = currentJson.get("labels")
-                                .stream()
-                                .map(s -> labelNameToLabel(s.asString()))
-                                // Avoid throwing NPE for unknown labels
-                                .filter(Objects::nonNull)
-                                .sorted()
-                                .collect(Collectors.toList());
-        }
+        return labels.stream()
+                .map(this::labelNameToLabel)
+                // Avoid throwing NPE for unknown labels
+                .filter(Objects::nonNull)
+                .toList();
+    }
+
+    @Override
+    public List<String> labelNames() {
         return labels;
     }
 
@@ -853,5 +853,26 @@ public class GitLabMergeRequest implements PullRequest {
     @Override
     public Optional<Hash> findIntegratedCommitHash() {
         return findIntegratedCommitHash(List.of(repository.forge().currentUser().id()));
+    }
+
+    /**
+     * Equality for a GitLabMergeRequest is based on the data snapshot retrieved
+     * when the instance was created.
+     */
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) {
+            return true;
+        }
+        if (o == null || getClass() != o.getClass()) {
+            return false;
+        }
+        GitLabMergeRequest that = (GitLabMergeRequest) o;
+        return json.equals(that.json);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(json);
     }
 }
